--- a/src/templates/listado.html
+++ b/src/templates/listado.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-
     {% block content %}
+
 
         <div class="col-md-12 p-3">
             <h3 class="text-left subtitulo ">Mis alumnos</h3>
@@ -165,8 +165,13 @@
                                                     </div>
                                                     <div id="success-message" style="display: none;">Cambios guardados correctamente</div>
 
-                                             </div>                                                                                                       
+                                             </div>    
+                                            
+
+                                                                                                   
                                             </form>   
+                                         
+                
                                         </div>                                                      
                                     </div>  
                                 </div>
@@ -175,6 +180,16 @@
       
                             {% endfor %}
                         </tbody>
+                        
+                        {% with messages = get_flashed_messages() %}
+                            {% if messages %}
+                                <ul class="flash-messages">
+                                    {% for message in messages %}
+                                        <div class="alert alert-danger">{{ message }}</div>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        {% endwith %}
                     </table>
                 </div>
             </div>
@@ -316,5 +331,6 @@
            
     {% endblock %}           
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>   
+    
 </body>             
                             
